refactor(auth): 토큰 로직 수정 [WAPO-258]
- ONBOARDING_ACCESS → PRE_TERMS_ACCESS
- validateToken 메서드가 여러 타입을 검증할 수 있게 수정
- 필터 로직을 이전 코드로 롤백